# tests_dpdb

./: Pipfile  package-lock.json  package.json  pom.xml  pyproject.toml  requirements.txt
npm/: package-lock.json  package.json
npm_no_fix/: package-lock.json
pip/: requirements.txt
pipenv/: Pipfile
poetry/: pyproject.toml
